@@ -1,6 +1,6 @@
 package com.restaurant_management.restaurant_management_backend.config;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
@@ -15,16 +15,38 @@ public class CorsConfig {
   @Value("${frontend.url}")
   private String frontendUrl;
 
+
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
-    CorsConfiguration cfg = new CorsConfiguration();
-    cfg.setAllowedOriginPatterns(List.of(frontendUrl));
-    cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
-    cfg.setAllowedHeaders(List.of("*"));
-    cfg.setAllowCredentials(true);
+    CorsConfiguration configuration = new CorsConfiguration();
+
+    configuration.setAllowedOriginPatterns(Arrays.asList(frontendUrl));
+
+    configuration.setAllowedMethods(Arrays.asList(
+      "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+    ));
+
+    configuration.setAllowedHeaders(Arrays.asList(
+      "Authorization",
+      "Content-Type",
+      "Accept",
+      "X-Requested-With",
+      "remember-me"
+    ));
+
+    configuration.setExposedHeaders(Arrays.asList(
+      "Authorization",
+      "Set-Cookie"
+    ));
+
+    configuration.setAllowCredentials(true);
+
+    configuration.setMaxAge(3600L);
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/**", cfg);
+    source.registerCorsConfiguration("/**", configuration);
+
     return source;
   }
+
 }
